fixing spacing

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -19,7 +19,7 @@
     width: 100%;
     padding-left: 25px;
     padding-right: 25px;
-    padding-top: 65px;
+    padding-top: 75px;
     padding-bottom: 75px;
 
     background: $secondary;
